<resources>
    <string name="app_name">Travelmantics</string>
    <string name="title_hint">Deal Title</string>
    <string name="price_hint">Deal price</string>
    <string name="deal_description">Deal description</string>
    <string name="menu_title_save">Save</string>
    <string name="saved_toast">Deal saved</string>
    <string name="travel_deal_image">Travel deal image</string>
    <string name="menu_add_new_deal">Add new deal</string>
    <string name="menu_deleteDeal">Delete Deal</string>
    <string name="menu_title_logout">Logout</string>
    <string name="add_image_button">Add Image</string>
    <string name="loginPageHeader">Sign in</string>
    <string name="field_emai">Email/username</string>
    <string name="tvEmail">EMAIL</string>
    <string name="tv_password">PASSWORD</string>
    <string name="tv_sign_in_with">or sign in with:</string>
    <string name="tv_signInHeading">SIGN IN</string>
    <string name="sign_in_button_label_google">Sign in with Google</string>
    <string name="sign_in_button_email">Sign in with email</string>
    <string name="sign_in_button_facebook">Sign in with Facebook</string>

</resources>
