<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_addNewDeal"
        android:title="@string/menu_add_new_deal"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_title_logout"
        app:showAsAction="ifRoom" />
</menu>